# serialcables-sphinx

./: LICENSE  README.md  capture.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: MCTP_PACKET_STRUCTURES.md  PROFILER_AND_ADMIN_TUNNELING.md
examples/: __init__.py  basic_usage.py  device_profiling.py  instrumented_test.py  live_hardware_test.py  shortcuts_example.py
src/serialcables_sphinx/: __init__.py  cli.py  profiler_cli.py  shortcuts.py  shortcuts_cli.py  sphinx.py
src/serialcables_sphinx/mctp/: __init__.py  builder.py  constants.py  fragmentation.py  header.py  parser.py
src/serialcables_sphinx/nvme_mi/: __init__.py  admin_tunneling.py  base_decoder.py  client.py  constants.py  decoder.py  decoders.py  opcodes.py  registry.py  request.py  response.py  status.py
src/serialcables_sphinx/profiler/: __init__.py  capture.py  loader.py  profile.py
src/serialcables_sphinx/transports/: __init__.py  base.py  hydra.py  mock.py
src/serialcables_sphinx/utils/: __init__.py  formatting.py
tests/: __init__.py  test_fragmentation.py  test_mock_transport.py  test_profiler.py  test_shortcuts.py
